# hydrogen

./: CMakeLists.txt  INSTALL.txt  NEW_DESIGN.txt  Sconstruct  TODO  TODO.jackMidi  TODO_JACK_ZOMBIES.txt  TRANSPORT_REDESIGN_NOTES.gmb  TRANSPORT_REDESIGN_TODO.txt  features.pri  git_helper  hydrogen.kdevelop  make_helper  reformat_sources.sh
cmake/libsndfile_flac/: CMakeLists.txt  libsndfile_flac.c
data/: hydrogen.default.conf
data/xsd/: pattern.xsd
extra/hydrogenPlayer/: HydrogenPlayer.cpp
gui/: gui.pro
gui/src/: AudioEngineInfoForm.cpp  EventListener.h  ExportSongDialog.cpp  HydrogenApp.cpp  HydrogenApp.h  LadspaFXProperties.cpp  LadspaFXProperties.h  LadspaFXSelector.cpp  MainForm.cpp  MainForm.h  MetroBlinker.cpp  PatternFillDialog.cpp  PatternPropertiesDialog.cpp  PlayerControl.cpp  PlayerControl.h  PreferencesDialog.cpp  PreferencesDialog.h  SongPropertiesDialog.cpp  UndoActions.h  VirtualPatternDialog.cpp  VirtualPatternDialog.h  main.cpp
gui/src/AudioFileBrowser/: AudioFileBrowser.cpp  SampleWaveDisplay.cpp
gui/src/InstrumentEditor/: InstrumentEditor.cpp  InstrumentEditor.h  LayerPreview.cpp  LayerPreview.h  (+1 more)
libs/hydrogen/: CMakeLists.txt  hydrogen.pro
no_gui/: no_gui.pro
src/cli/: main.cpp
test/: Makefile  t_000_master_test.cpp  t_Foo.cpp.template  t_SeqEvent.cpp  t_SeqScript.cpp  t_SeqScriptPrivate.cpp  t_SimpleTransportMaster.cpp  t_TransportPosition.cpp  t_songhelpers.cpp  test_macros.h  test_utils.cpp  test_utils.h
tests/: CMakeLists.txt  test_xml.cpp  tests.cpp
tests/data/: drumkit.xml  pattern.xml
tests/data/drumkit/: drumkit.xml
(+260 files in other folders)
